include/mcp/c_api/mcp_c_types_api.h

/* ============================================================================
 * Message Functions
 * ============================================================================
 */

MCP_API mcp_message_t mcp_message_create(const char* role) MCP_NOEXCEPT;
MCP_API void mcp_message_free(mcp_message_t message) MCP_NOEXCEPT;
MCP_API const char* mcp_message_get_role(mcp_message_t message) MCP_NOEXCEPT;
MCP_API void mcp_message_add_content(mcp_message_t message,
                                     mcp_content_block_t content) MCP_NOEXCEPT;
MCP_API size_t mcp_message_get_content_count(mcp_message_t message)
    MCP_NOEXCEPT;
MCP_API mcp_content_block_t mcp_message_get_content(mcp_message_t message,
                                                    size_t index) MCP_NOEXCEPT;
/* ============================================================================
 * Resource Functions
 * ============================================================================
 */

MCP_API mcp_resource_t mcp_resource_create(const char* uri,
                                           const char* name) MCP_NOEXCEPT;
MCP_API void mcp_resource_free(mcp_resource_t resource) MCP_NOEXCEPT;
MCP_API const char* mcp_resource_get_uri(mcp_resource_t resource) MCP_NOEXCEPT;
MCP_API const char* mcp_resource_get_name(mcp_resource_t resource) MCP_NOEXCEPT;
MCP_API void mcp_resource_set_description(mcp_resource_t resource,
                                          const char* description) MCP_NOEXCEPT;
MCP_API const char* mcp_resource_get_description(mcp_resource_t resource)
    MCP_NOEXCEPT;
MCP_API void mcp_resource_set_mime_type(mcp_resource_t resource,
                                        const char* mime_type) MCP_NOEXCEPT;
MCP_API const char* mcp_resource_get_mime_type(mcp_resource_t resource)
    MCP_NOEXCEPT;
/* ============================================================================
 * JSON-RPC Request Functions
 * ============================================================================
 */

MCP_API mcp_jsonrpc_request_t mcp_jsonrpc_request_create(
    const char* jsonrpc, const char* method) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_request_free(mcp_jsonrpc_request_t request)
    MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_request_get_jsonrpc(
    mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_request_get_method(
    mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_request_set_id(mcp_jsonrpc_request_t request,
                                        mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_request_id_t
mcp_jsonrpc_request_get_id(mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_request_set_params(
    mcp_jsonrpc_request_t request, const char* json_params) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_request_get_params(
    mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
/* ============================================================================
 * JSON-RPC Response Functions
 * ============================================================================
 */

MCP_API mcp_jsonrpc_response_t mcp_jsonrpc_response_create(const char* jsonrpc)
    MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_response_free(mcp_jsonrpc_response_t response)
    MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_response_get_jsonrpc(
    mcp_jsonrpc_response_t response) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_response_set_id(mcp_jsonrpc_response_t response,
                                         mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_request_id_t
mcp_jsonrpc_response_get_id(mcp_jsonrpc_response_t response) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_response_set_result(
    mcp_jsonrpc_response_t response, const char* json_result) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_response_get_result(
    mcp_jsonrpc_response_t response) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_response_set_error(mcp_jsonrpc_response_t response,
                                            mcp_error_t error) MCP_NOEXCEPT;
MCP_API mcp_error_t
mcp_jsonrpc_response_get_error(mcp_jsonrpc_response_t response) MCP_NOEXCEPT;
/* ============================================================================
 * Protocol Message Functions
 * ============================================================================
 */

/* Initialize Request/Response */
MCP_API mcp_initialize_request_t
mcp_initialize_request_create(const char* protocol_version,
                              const char* client_name,
                              const char* client_version) MCP_NOEXCEPT;
MCP_API void mcp_initialize_request_free(mcp_initialize_request_t request)
    MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_request_get_protocol_version(
    mcp_initialize_request_t request) MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_request_get_client_name(
    mcp_initialize_request_t request) MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_request_get_client_version(
    mcp_initialize_request_t request) MCP_NOEXCEPT;
MCP_API mcp_initialize_response_t
mcp_initialize_response_create(const char* protocol_version,
                               const char* server_name,
                               const char* server_version) MCP_NOEXCEPT;
MCP_API void mcp_initialize_response_free(mcp_initialize_response_t response)
    MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_response_get_protocol_version(
    mcp_initialize_response_t response) MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_response_get_server_name(
    mcp_initialize_response_t response) MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_response_get_server_version(
    mcp_initialize_response_t response) MCP_NOEXCEPT;
/* Implementation/Server Info Functions */
MCP_API mcp_implementation_t
mcp_implementation_create(const char* name, const char* version) MCP_NOEXCEPT;
MCP_API void mcp_implementation_free(mcp_implementation_t impl) MCP_NOEXCEPT;
MCP_API const char* mcp_implementation_get_name(mcp_implementation_t impl)
    MCP_NOEXCEPT;
MCP_API const char* mcp_implementation_get_version(mcp_implementation_t impl)
    MCP_NOEXCEPT;
MCP_API void mcp_implementation_set_title(mcp_implementation_t impl,
                                          const char* title) MCP_NOEXCEPT;
MCP_API const char* mcp_implementation_get_title(mcp_implementation_t impl)
    MCP_NOEXCEPT;
/* Client Capabilities Functions */
MCP_API mcp_client_capabilities_t mcp_client_capabilities_create(void)
    MCP_NOEXCEPT;
MCP_API void mcp_client_capabilities_free(mcp_client_capabilities_t caps)
    MCP_NOEXCEPT;
MCP_API mcp_bool_t
mcp_client_capabilities_has_roots(mcp_client_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_client_capabilities_set_roots(mcp_client_capabilities_t caps,
                                               mcp_bool_t enabled) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_client_capabilities_has_sampling(
    mcp_client_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_client_capabilities_set_sampling(
    mcp_client_capabilities_t caps, mcp_bool_t enabled) MCP_NOEXCEPT;
/* Server Capabilities Functions */
MCP_API mcp_server_capabilities_t mcp_server_capabilities_create(void)
    MCP_NOEXCEPT;
MCP_API void mcp_server_capabilities_free(mcp_server_capabilities_t caps)
    MCP_NOEXCEPT;
MCP_API mcp_bool_t
mcp_server_capabilities_has_tools(mcp_server_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_server_capabilities_set_tools(mcp_server_capabilities_t caps,
                                               mcp_bool_t enabled) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_server_capabilities_has_prompts(
    mcp_server_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_server_capabilities_set_prompts(
    mcp_server_capabilities_t caps, mcp_bool_t enabled) MCP_NOEXCEPT;
/* Additional JSON-RPC Functions */
MCP_API mcp_request_id_t
mcp_jsonrpc_request_get_id(mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_request_get_params(
    mcp_jsonrpc_request_t request) MCP_NOEXCEPT;
MCP_API mcp_request_id_t
mcp_jsonrpc_response_get_id(mcp_jsonrpc_response_t response) MCP_NOEXCEPT;