sdk/csharp/src/Interop/McpTypesApi.cs


        /* ============================================================================
         * Message Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_message_create([MarshalAs(UnmanagedType.LPStr)] string role);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_message_free(IntPtr message);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_message_get_role(IntPtr message);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_message_add_content(IntPtr message, IntPtr content);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_message_get_content_count(IntPtr message);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_message_get_content(IntPtr message, UIntPtr index);

        /* ============================================================================
         * Resource Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_resource_create(
            [MarshalAs(UnmanagedType.LPStr)] string uri,
            [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_resource_free(IntPtr resource);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_resource_get_uri(IntPtr resource);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_resource_get_name(IntPtr resource);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_resource_set_description(
            IntPtr resource,
            [MarshalAs(UnmanagedType.LPStr)] string description);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_resource_get_description(IntPtr resource);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_resource_set_mime_type(
            IntPtr resource,
            [MarshalAs(UnmanagedType.LPStr)] string mime_type);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_resource_get_mime_type(IntPtr resource);

        /* ============================================================================
         * JSON-RPC Request Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_request_create(
            [MarshalAs(UnmanagedType.LPStr)] string jsonrpc,
            [MarshalAs(UnmanagedType.LPStr)] string method);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_request_free(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_request_get_jsonrpc(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_request_get_method(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_request_set_id(IntPtr request, IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_request_get_id(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_request_set_params(
            IntPtr request,
            [MarshalAs(UnmanagedType.LPStr)] string json_params);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_request_get_params(IntPtr request);

        /* ============================================================================
         * JSON-RPC Response Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_response_create([MarshalAs(UnmanagedType.LPStr)] string jsonrpc);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_response_free(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_response_get_jsonrpc(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_response_set_id(IntPtr response, IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_response_get_id(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_response_set_result(
            IntPtr response,
            [MarshalAs(UnmanagedType.LPStr)] string json_result);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_response_get_result(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_response_set_error(IntPtr response, IntPtr error);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_response_get_error(IntPtr response);

        /* ============================================================================
         * Protocol Message Functions
         * ============================================================================ */

        // Initialize Request/Response
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_request_create(
            [MarshalAs(UnmanagedType.LPStr)] string protocol_version,
            [MarshalAs(UnmanagedType.LPStr)] string client_name,
            [MarshalAs(UnmanagedType.LPStr)] string client_version);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_initialize_request_free(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_request_get_protocol_version(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_request_get_client_name(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_request_get_client_version(IntPtr request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_response_create(
            [MarshalAs(UnmanagedType.LPStr)] string protocol_version,
            [MarshalAs(UnmanagedType.LPStr)] string server_name,
            [MarshalAs(UnmanagedType.LPStr)] string server_version);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_initialize_response_free(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_response_get_protocol_version(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_response_get_server_name(IntPtr response);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_response_get_server_version(IntPtr response);

        // Implementation/Server Info Functions
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_implementation_create(
            [MarshalAs(UnmanagedType.LPStr)] string name,
            [MarshalAs(UnmanagedType.LPStr)] string version);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_implementation_free(IntPtr impl);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_implementation_get_name(IntPtr impl);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_implementation_get_version(IntPtr impl);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_implementation_set_title(
            IntPtr impl,
            [MarshalAs(UnmanagedType.LPStr)] string title);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_implementation_get_title(IntPtr impl);

        // Client Capabilities Functions
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_client_capabilities_create();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_client_capabilities_free(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_client_capabilities_has_roots(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_client_capabilities_set_roots(IntPtr caps, mcp_bool_t enabled);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_client_capabilities_has_sampling(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_client_capabilities_set_sampling(IntPtr caps, mcp_bool_t enabled);

        // Server Capabilities Functions
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_server_capabilities_create();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_capabilities_free(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_server_capabilities_has_tools(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_capabilities_set_tools(IntPtr caps, mcp_bool_t enabled);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_server_capabilities_has_prompts(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_capabilities_set_prompts(IntPtr caps, mcp_bool_t enabled);
